# wireless_localization2

./: .gitignore  README.md
KNN-model/: wireless_localization.ipynb
calibration/: README.md
calibration/websocket_client/: README.md  process_aps.py  ws_client.py  ws_client2.py
calibration/websocket_client/utils/: db_clean.py  db_read.py
calibration/websocket_server(ESP32)/: README.md  sdkconfig  sdkconfig.old
calibration/websocket_server(ESP32)/components/scan/: Kconfig.projbuild  scan.c  scan.h
calibration/websocket_server(ESP32)/components/ws_server/: CMakeLists.txt  ws_server.c  ws_server.h
calibration/websocket_server(ESP32)/main/: main.c
device/websocket_client(ESP32)/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.ci  sdkconfig.old
device/websocket_client(ESP32)/components/init/: CMakeLists.txt  init.c  init.h
device/websocket_client(ESP32)/components/mqtt_client1/: CMakeLists.txt  Kconfig  mqtt_client1.c  mqtt_client1.h
device/websocket_client(ESP32)/components/scan/: CMakeLists.txt  Kconfig  scan.c  scan.h
device/websocket_client(ESP32)/components/ssd1306/: CMakeLists.txt
device/websocket_client(ESP32)/components/ws_client/: CMakeLists.txt  Kconfig  ws_client.c  ws_client.h
device/websocket_client(ESP32)/main/: main.c
location_server/: README.md
server/: knn_loc_algorithm.sav  model.py  process_aps_online.py  ws_server.py
server-on-device/: README.md
